--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -238,6 +238,7 @@ jobs:
             #!/bin/sh
             # setarch [arch] [options] [program [argument...]]
             # A small script that replace setarch(8) with a dumb program caller - setarch is not supported in GitHub docker
+            /usr/bin/setarch_old "$1"
             shift; while [ "${1##-*}" = "" ] && [ "$1" != "" ]; do shift; done
             exec "$@"
           CROSS_DOCKERFILE: |
@@ -286,6 +287,7 @@ jobs:
           echo "$COMPILER" > "$compiler_file"
           echo "$REPROTEST_RUNNER" > "$runner_file"
           {
+            echo "RUN mv /usr/bin/setarch /usr/bin/setarch_old"
             echo "COPY --chmod=555 \"$setarch\" /usr/bin/setarch"
             # WORKAROUND: add current user and group to database to make fusermount happy
             echo "RUN groupadd --gid \"$(id --group)\" --non-unique \"$(id --group --name)\""
