--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -240,7 +240,7 @@ jobs:
             FROM $CROSS_BASE_IMAGE
             RUN apt-get update >/dev/null 2>&1
             RUN apt-get install --yes reprotest diffoscope jq sudo >/dev/null 2>&1
-            RUN useradd -mUG fuse,sudo repro
+            RUN useradd -mU repro
             RUN echo 'ALL ALL=(ALL:ALL) NOPASSWD: ALL' >> /etc/sudoers
           COMPILER: |
             #!/usr/bin/env bash
