--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -235,6 +235,11 @@ jobs:
           EXECUTABLE_DIR: '${{ steps.mktemp-executable.outputs.EXECUTABLE_DIR }}'
           # fuse driver needs privileged container; not a security problem since we're docker-in-docker
           CROSS_CONTAINER_OPTS: '--privileged'
+          SUDO_STUB: |
+            #!/bin/sh
+            # Remove host option from sudo since cross docker doesn't like it
+            if [ "$1" == '-h' ]; then shift 2; fi
+            exec /usr/bin/sudo "$@"
           CROSS_DOCKERFILE: |
             ARG CROSS_BASE_IMAGE
             FROM $CROSS_BASE_IMAGE
@@ -283,13 +288,17 @@ jobs:
           dockerfile="$(mktemp)"
           compiler_file="$(mktemp -p .)"
           runner_file="$(mktemp -p .)"
+          sudo_stub_file="$(mktemp -p .)"
           echo "$CROSS_DOCKERFILE" > "$dockerfile"
           echo "$COMPILER" > "$compiler_file"
           echo "$REPROTEST_RUNNER" > "$runner_file"
+          echo "$SUDO_STUB" > "$sudo_stub_file"
           {
             # WORKAROUND: add current user and group to database to make fusermount happy
             echo "RUN groupadd --gid \"$(id --group)\" --non-unique \"$(id --group --name)\""
             echo "RUN useradd --non-unique --uid \"$(id --user)\" --gid \"$(id --group)\" \"$(id --user --name)\" "
+            # WORKAROUND: sudo inside docker is unhappy when resolving hosts, so use a wrapper to remove it
+            echo "COPY --chmod=555 \"$sudo_stub_file\" /usr/local/bin/sudo"
           } >> "$dockerfile"
           env_dir="$(mktemp -dp .)"
           echo "$TARGET" | base64 > "${env_dir}/target"
