--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -238,7 +238,7 @@ jobs:
           SUDO_STUB: |
             #!/bin/sh
             # Remove host option from sudo since cross docker doesn't like it
-            if [ "$1" == '-h' ]; then shift 2; fi
+            if [ "$1" = '-h' ]; then shift 2; fi
             exec /usr/bin/sudo "$@"
           CROSS_DOCKERFILE: |
             ARG CROSS_BASE_IMAGE
