--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -233,7 +233,7 @@ jobs:
           REPROTEST_VARY: '${{ inputs.reprotest-variations }}'
           EXECUTABLE_DIR: '${{ steps.mktemp-executable.outputs.EXECUTABLE_DIR }}'
           # fuse driver needs privileged container; not a security problem since we're docker-in-docker
-          CROSS_CONTAINER_OPTS: '--privileged --security-opt=no-new-privileges=false --security-opt=seccomp=unconfined --security-opt=systempaths=unconfined --security-opt=label=disable'
+          CROSS_CONTAINER_OPTS: '--privileged --security-opt=systempaths=unconfined'
           CROSS_DOCKERFILE: |
             ARG CROSS_BASE_IMAGE
             FROM $CROSS_BASE_IMAGE
