fix: use cross metadata command to setup toolchain

--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -297,7 +297,8 @@ jobs:
           echo "$compiler_file" | base64 > "${env_dir}/compiler_file"
           echo "$EXECUTABLE_FILTER" | base64 > "${env_dir}/executable_filter"
 
-          rustup target add "$TARGET"
+          # Run cross metadata before compiling to install toolchain
+          env CROSS_BUILD_DOCKERFILE="$dockerfile" cross metadata "--target=$TARGET" --no-deps
           env CROSS_BUILD_DOCKERFILE="$dockerfile" cross-util run "--target=$TARGET" -- "bash $runner_file \"$env_dir\""
           find "$EXECUTABLE_DIR" \( -name "*.diffoscope.out" -or -name "SHA256SUMS" \) -and -type f -delete
 
