--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -253,7 +253,8 @@ jobs:
             target="$(cat "${ENV_DIR}/target" | base64 -d)"
             output_dir="$(cat "${ENV_DIR}/output_dir" | base64 -d)"
             executable_filter="$(cat "${ENV_DIR}/executable_filter" | base64 -d)"
-            vary_time="$(cat "${ENV_DIR}"/vary_time | base64 -d)"
+            vary_time="$(cat "${ENV_DIR}/vary_time" | base64 -d)"
+            timechange="$(cat "${ENV_DIR}/timechange")"
             export PATH="$(cat "${ENV_DIR}/path" | base64 -d)"
             tmp_output_dir="$(mktemp -d)"
 
@@ -264,6 +265,7 @@ jobs:
               secs="$(shuf -i "${min_secs}-${max_secs}" -n 1)"
               sudo date -Ins -s "$(date -Ins -d "$secs seconds")"
               echo "Time travelled! Current time: $(date)"
+              echo "$(( timechange + secs ))" > "${ENV_DIR}/timechange"
             fi
 
             env "CARGO_TARGET_DIR=$tmp_output_dir" \
@@ -282,6 +284,7 @@ jobs:
             output_dir="$(mktemp -dp .)"
             echo "$output_dir" | base64 > "${env_dir}/output_dir"
             echo "$PATH" | base64 > "${env_dir}/path"
+            echo "0" > "${env_dir}/timechange"
             REPROTEST_VERBOSE="$(cat "${env_dir}/reprotest_verbose" | base64 -d)"
             REPROTEST_VARY="$(cat "${env_dir}/reprotest_vary" | base64 -d)"
             EXECUTABLE_DIR="$(cat "${env_dir}/executable_dir" | base64 -d)"
@@ -302,7 +305,8 @@ jobs:
               "--verbosity=$REPROTEST_VERBOSE" \
               "--variations=$REPROTEST_VARY" \
               "bash $COMPILER_FILE" "${output_dir}/*" \
-              && touch "${env_dir}/REPRODUCIBLE"
+              && touch "${env_dir}/REPRODUCIBLE" \
+              ; sudo date -Ins -s "$(date -Ins -d "$(cat "${env_dir}/timechange") seconds ago")"
         run: |
           dockerfile="$(mktemp)"
           compiler_file="$(mktemp -p .)"
